# Xenom-WAVEZ-pow

./: .gitignore  .scalafmt.conf  BLOCKCHAIN_INTEGRATION.md  CHECK_BALANCE.md  DEPLOYMENT.md  DIFFICULTY_CONSENSUS.md  FULL_INTEGRATION_COMPLETE.md  GITHUB_RELEASE.md  GPU_MINER_COMPLETE.md  GPU_MINING.md  MINER_ADDRESS_FIX.md  MINER_API_SETUP.md  MINER_WALLET_GUIDE.md  MINING_API.md  MINING_TEMPLATE_COMPLETE.md  POW_ONLY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  SOLUTION_POW_VALIDATION_FAILURE.md  TOKENOMICS.md  benchmark-miner.sh  build-with-docker.sh  build.sbt  create-wallet.sh  debug-miner-output.sh  debug-timestamp-issue.sh  deploy-remote.sh  gpu-miner.conf  install-blake3sum.sh  mine-gpu.sh  mine-loop.sh  mine-multi-gpu.sh  mine.sh  patch1.diff  start-node-fixed.sh  start-node.sh  start-peer.sh  test-gpu-mining.sh  (+4 more)
.github/: CODEOWNERS
benchmark/: build.sbt
docker/: Dockerfile  entrypoint.sh  node-sbt-builder.Dockerfile
hiveos-xenom-miner/: INSTALL.md  PACKAGE.sh  QUICKSTART.md  README.md  h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh  h-stats.sh.backup  mine-loop.sh
node/: README.md  build.sbt  waves-pow-node2.conf  waves-pow-node3.conf  waves-pow-peer.conf  waves-pow.conf
project/: CommonSettings.scala  Dependencies.scala  PublishedModule.scala  plugins.sbt  (+1 more)
xenom-miner-rust/: API.md  Cargo.toml  GPU_IMPLEMENTATION.md  GPU_SUMMARY.md  QUICKSTART_GPU.md  README_GPU.md  build.rs  compile-cuda.sh  run_gpu_example.sh
xenom-miner-rust/src/: blake3.cu  blake3_simple.cu  gpu_miner.rs  main.rs  node_client.rs  stats.rs
(+840 files in other folders)
